Create Option Section and Recustomize About Section

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -10,7 +10,7 @@
             <div class="about--desc-detail">
                 <h4 class="about--desc-header">LIVE ADVENTURES LIKE YOU NEVER HAVE BEFORE</h4>
                 <div class="about--desc-quote" style="margin-bottom:50px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.</div>
-                <a class="about--button" href="#">Learn more <i class="fas fa-arrow-right    "></i></a>
+                <div class="about--button"><a href="#">Learn more <i class="fas fa-arrow-right    "></i></a></div>
             </div>
         </div>
         <div class="about--picture-group">
