--- a/views/partials/option.ejs
+++ b/views/partials/option.ejs
@@ -1,1 +1,29 @@
-<h1>option</h1>
+<link rel="stylesheet" href="assets/css/option.css" type="text/css"/>
+<div class="option--container">
+    <div class="option--row">
+        <div class="option--row-2  option--row-2-top">
+            <div class="option--col">
+                <i class="fas fa-globe option--col-icon"></i>
+                <h4 class="option--col-heading option--op60">explore the world</h4>
+                <p class="option--op60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+            </div>
+            <div class="option--col">
+                <i class="far fa-compass option--col-icon"></i>
+                <h4 class="option--col-heading option--op60">Meet nature</h4>
+                <p class="option--op60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+            </div>
+        </div>
+        <div class="option--row-2 option--row-2-bot">
+            <div class="option--col">
+                <i class="far fa-map option--col-icon"></i>
+                <h4 class="option--col-heading option--op60">Find your way</h4>
+                <p class="option--op60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+            </div>
+            <div class="option--col">
+                <i class="far fa-heart option--col-icon"></i>
+                <h4 class="option--col-heading option--op60">Live a healthier life</h4>
+                <p class="option--op60">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur. </p>
+            </div>
+        </div>
+    </div>
+</div>
