--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -13,16 +13,21 @@
   margin-bottom: 50px;
 }
 .about--button {
-  color: #55c57a;
+  max-width: 98px;
+}
+.about--button > a {
   text-decoration: none;
+  color: #55c57a;
   padding: 5px 2px 5px 2px;
   border-bottom: 1px solid #55c57a;
 }
 .about--button:hover {
+  transform: translate(0px, -3px);
+  transition: 0.2s;
+}
+.about--button:hover > a {
   background-color: #55c57a;
   color: aliceblue;
-  transform: scale(1.15);
-  transition: 0.2s;
 }
 .about--header:hover {
   transform: rotate(2deg) scale(1.1) skew(15deg);
@@ -39,6 +44,7 @@
 }
 .about--picture1 {
   position: absolute;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   top: -2rem;
   left: 0;
   height: 60%;
@@ -49,6 +55,7 @@
 }
 .about--picture2 {
   position: absolute;
+  transition: transform 0.3s, -webkit-transform 0.3s;
   height: 60%;
   right: -33rem;
   z-index: 2;
@@ -59,6 +66,7 @@
 }
 .about--picture3 {
   position: absolute;
+  transition: transform 0.15s, -webkit-transform 0.15s;
   right: -26rem;
   top: 6rem;
   max-width: 323px;
@@ -141,7 +149,7 @@
   .about--picture-group {
     height: 500px;
     max-width: 0%;
-    margin: 20% 20%;
+    margin: 20% 20% 0% 20%;
   }
   .about--desc {
     max-width: 100%;
