--- a/public/assets/scss/about.scss
+++ b/public/assets/scss/about.scss
@@ -20,15 +20,20 @@
         margin-bottom:50px;
     };
     &--button{
-        color:#55c57a;
-        text-decoration:none;
-        padding: 5px 2px 5px 2px;
-        border-bottom: 1px solid #55c57a;
+        > a{
+            text-decoration:none;
+            color:#55c57a;
+            padding: 5px 2px 5px 2px;
+            border-bottom: 1px solid #55c57a;
+        }
+        max-width:98px;
     };
     &--button:hover{
-        background-color: #55c57a;
-        color:aliceblue;
-        transform: scale(1.15);
+        >a{
+            background-color: #55c57a;
+            color:aliceblue;
+        }
+        transform: translate(0px,-3px);
         transition: 0.2s;
     }
     &--header:hover{
@@ -46,6 +51,7 @@
     };
     &--picture1{
         position:absolute;
+        transition: transform .3s, -webkit-transform .3s;
         top:-2rem;
         left:0;
         height: 60%;
@@ -56,6 +62,7 @@
     };
     &--picture2{
         position:absolute;
+        transition: transform .3s, -webkit-transform .3s;
         height: 60%;
         right:-33rem;
         z-index: 2;
@@ -66,6 +73,7 @@
     };
     &--picture3{
         position:absolute;
+        transition: transform .15s, -webkit-transform .15s;
         right:-26rem;
         top:6rem;
         max-width: 323px;
@@ -139,7 +147,7 @@
         &--picture-group{
             height:500px;
             max-width:0%;
-            margin:20% 20%;
+            margin:20% 20% 0% 20%;
         }
         &--desc{
             max-width: 100%;
